[package]
name = "async-graphql-hive-usage"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
license-file = "LICENSE.md"
repository = "https://github.com/aaroningalls/async-graphql-hive-usage"
description = "An async-graphql extension to report API usage to The Guild's GraphQL Hive"
authors = ["Aaron Ingalls"]
keywords = ["graphql", "async-graphql"]


[dependencies]
async-graphql = { version = "7", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
base64 = "0.22"
reqwest = { version = "0.12", optional = true }
futures = "0.3"
tracing = { version = "0.1", optional = true }

[features]
default = ["tracing"]
reqwest = ["dep:reqwest"]
tracing = ["dep:tracing"]
